<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaAtualizar">

    <TextView
        android:id="@+id/titulo_tela_atualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar_curso"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lv_tela_atualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ListView
        android:id="@+id/lv_tela_atualizar"
        android:layout_width="380dp"
        android:layout_height="267dp"
        app:layout_constraintBottom_toTopOf="@+id/et_atualiza_nAlunos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_tela_atualizar"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_atualiza_nAlunos"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/numero_alunos_curso"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_atualiza_notaMec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_tela_atualizar"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_atualiza_notaMec"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/nota_mec_curso"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_atualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_nAlunos"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_atualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_notaMec"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>